<resources>
    <string name="app_name">OrataShop</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_name">Abdul Hafiidh S</string>
    <string name="title_about">About</string>
    <string name="title_creadit">Created by Abdul Hafiidh S</string>
    <string name="website">Website : oratakashi.github.io</string>
    <string name="title_email">davidcreazy@gmail.com</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="large_text">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="text_none">-</string>
    <string name="text_zero">0</string>
    <string name="title_seller">Informasi Penjual</string>
    <string name="title_buy">Beli</string>
    <string name="title_hint_search">Mau belanja apa hari ini...</string>
    <string name="title_handphone">Handphone</string>
    <string name="title_kategori">Kategori Produk</string>
    <string name="title_laptop">Laptop</string>
    <string name="title_headphone">Headphone</string>
    <string name="title_printer">Printer</string>
    <string name="title_cart">Cart</string>
    <string name="title_new_product">Produk Terbaru</string>
    <string name="title_address">Cilame, Bandung Barat</string>
    <string name="title_informasi">Informasi Pribadi</string>
    <string name="title_product_sell">Produk yang dijual</string>
</resources>
