<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.Detail.DetailActivity"
    tools:showIn="@layout/activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginBottom="@dimen/activity_margin"
        android:orientation="vertical">
        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_none"
            android:textSize="@dimen/size_title"
            android:fontFamily="@font/sfprobold"/>
        <TextView
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_zero"
            android:textSize="@dimen/size_title"
            android:fontFamily="@font/sfpromedium"
            android:textColor="@color/colorAccent"/>
        <View
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_seller"
            android:textSize="@dimen/size_title"
            android:fontFamily="@font/sfprobold"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            app:cardElevation="4dp"
            app:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_margin"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/photo"/>
                <LinearLayout
                    android:paddingStart="@dimen/activity_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_name"
                        android:fontFamily="@font/sfpromedium"
                        android:textSize="@dimen/size_subtitle"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_email"
                        android:fontFamily="@font/sfprolight"
                        android:textSize="@dimen/size_desc"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_line"/>
        <Button
            android:id="@+id/btnBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/title_buy"
            android:textColor="@color/putih"
            android:textAllCaps="false"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>