<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.About.AboutActivity"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_informasi"
            android:fontFamily="@font/sfprobold"
            android:textSize="@dimen/size_title"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large_text"
            android:fontFamily="@font/sfprolight"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin" />
        <TextView
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_product_sell"
            android:fontFamily="@font/sfprobold"
            android:textSize="@dimen/size_title"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>