<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/putih"
    android:id="@+id/scrollview"
    android:fillViewport="true"
    tools:context=".ui.Home.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/bg_search"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/colorPrimary"/>
        <EditText
            android:layout_marginTop="25dp"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:textSize="@dimen/size_subtitle"
            android:fontFamily="@font/sfpromedium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/title_hint_search"
            android:drawableEnd="@drawable/ic_search"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:background="@drawable/bg_input"/>
        <LinearLayout
            android:layout_below="@id/bg_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/title_kategori"
                android:fontFamily="@font/sfprobold"
                android:textSize="@dimen/size_title"/>
            <HorizontalScrollView
                android:layout_marginStart="-16dp"
                android:layout_marginEnd="-16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
                <include layout="@layout/menu_kategori"/>
            </HorizontalScrollView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginBottom="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:text="@string/title_new_product"
                android:fontFamily="@font/sfprobold"
                android:textSize="@dimen/size_title"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>